--- a/js/test/index.html
+++ b/js/test/index.html
@@ -2,7 +2,7 @@
 <button id="stop">Stop</button>
 <input type="file" id="file" accept=".wav" />
 <script type="module">
-    import {playSound ,stop, readAudioFile} from './test.js';
+    import {playSound ,stop, readAudioFile} from '../../dist/test.js';
     document.getElementById('test').addEventListener('click', () => {
         playSound();
     });
